fixes to gap spacing

--- a/styles/components/c-delete-input.scss
+++ b/styles/components/c-delete-input.scss
@@ -6,7 +6,7 @@
   display: flex;
   align-items: center;
   gap: 5px;
-  padding: 4px 12px;
+  padding: 4px 2px;
   border-radius: $input-radius;
 
   input {
